# Tetrahedralizer

./: Readme.txt  Third-Party Notices.txt
TetrahedralizerLibrary/: CMakeLists.txt
TetrahedralizerLibrary/TetrahedralizerLibrary/: binary_space_partition.cpp  binary_space_partition.hpp  common_function.h  common_header.h  convex_hull_partition.cpp  convex_hull_partition.hpp  delaunay_tetrahedralization.cpp  delaunay_tetrahedralization.hpp  facet_association.cpp  facet_association.hpp  facet_order.h  facet_partition.cpp  generic_point_approximation.cpp  generic_point_approximation.hpp  generic_point_predicate.cpp  generic_point_predicate.hpp  interior_characterization.cpp  interior_characterization.hpp  main.cpp  mesh_raycaster.cpp  mesh_raycaster.hpp  numeric_array.h  polyhedralization.cpp  polyhedralization.hpp  polyhedralization_tetrahedralization.cpp  polyhedralization_tetrahedralization.hpp  tetrahedralization.cpp  tetrahedralization.hpp  triangle_tetrahedron_intersection.cpp  triangle_tetrahedron_intersection.h  triangle_tetrahedron_intersection.hpp
TetrahedralizerLibrary/TetrahedralizerLibrary.xcodeproj/: project.pbxproj
TetrahedralizerLibrary/TetrahedralizerLibrary/geometric_object/: double3.h  facet.h  polyhedralization.cpp  polyhedralization.hpp  segment.h  tetrahedralization.cpp  tetrahedralization.hpp
TetrahedralizerLibrary/TetrahedralizerLibrary/indirect_predicates/: implicit_point.h
TetrahedralizerLibrary/TetrahedralizerLibrary/unused/: facet_association.cpp  facet_association.hpp  main.cpp  mesh_raycaster.cpp  mesh_raycaster.hpp  texture_projection.cpp  (+1 more)
TetrahedralizerLibrary/src/: binary_space_partition.cpp  binary_space_partition.hpp  common_function.h  convex_hull_partition.cpp  convex_hull_partition.hpp  delaunay_tetrahedralization.cpp  delaunay_tetrahedralization.hpp  facet_order.h  facet_partition.hpp  generic_point_approximation.hpp  generic_point_predicate.hpp  interior_characterization.hpp  main.cpp  polyhedralization_creation.cpp  polyhedralization_creation.hpp  polyhedralization_tetrahedralization.hpp
(+172 files in other folders)
